Time: 12 ms (25.34%), Space: 142.5 MB (73.29%) - LeetHub