@@ -1,16 +1,15 @@
 class Solution {
     public int maxDistance(List<List<Integer>> arrays) {
-        int min_ = arrays.get(0).get(0);  
-        int curr_max = arrays.get(0).get(arrays.get(0).size()-1); 
-        int answer = 0; 
+        int maxDiff = Integer.MIN_VALUE; 
+        int min_ = arrays.get(0).get(0); 
+        int max_ = arrays.get(0).getLast(); 
         for(int i = 1; i < arrays.size(); i++){
-            int last = arrays.get(i).size()-1; 
-            answer = Math.max(answer, Math.abs(min_ - arrays.get(i).get(last))); 
-            answer = Math.max(answer, Math.abs(arrays.get(i).get(0) - curr_max)); 
-
+            int calc1 = Math.abs(max_ - arrays.get(i).get(0)); 
+            int calc2 = Math.abs(min_ - arrays.get(i).getLast());
+            maxDiff = Math.max(maxDiff, Math.max(calc1, calc2));
             min_ = Math.min(min_, arrays.get(i).get(0)); 
-            curr_max = Math.max(curr_max, arrays.get(i).get(last)); 
+            max_ = Math.max(max_, arrays.get(i).getLast()); 
         }
-        return answer; 
+        return maxDiff; 
     }
 }
